kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haddock
  labels:
    name: haddock
