kube/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        resources:
          limits:
            cpu: "1"
            memory: "500M"
          requests:
            cpu: "500m"
            memory: "250M"
        ports:
        - containerPort: 80
